--- a/.github/workflows/main_localweatherproject.yml
+++ b/.github/workflows/main_localweatherproject.yml
@@ -5,17 +5,18 @@ name: Build and deploy Node.js app to Azure Web App - LocalWeatherProject
 
 # Trigger the workflow on push to 'main' branch
 on:
-push:
-branches:
-- main
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 # Define the jobs in the workflow
 jobs:
   build:
     runs-on: windows-latest
-
-      - uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
@@ -33,13 +34,13 @@ jobs:
         with:
           name: node-app
           path: .
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
